<resources>
    <string name="app_name">SmartShopping</string>

    <!-- Login Activity -->

    <string name="login_name">SMART SHOPPING</string>
    <string name="login_text">Login</string>
    <string name="create_account_text">Create Account</string>
    <string name="login_facebook_text">Login With Facebook</string>
    <string name="username_text">UserName</string>
    <string name="password_text">Password</string>

    <string name="facebook_app_id">508906662779712</string>
    <string name="fb_login_protocol_scheme">fb508906662779712</string>

    <!-- Shopping List -->
    <string name="hint_add_shopping_list">Create a shopping list</string>
    <string name="hint_add_shopping_list_describe">Detail of your shopping list</string>
    <string name="add_shopping_list_photo_button">Upload Photo</string>
    <string name="add_shopping_list_add_button">Add</string>
    <string name="add_shopping_list_cancel_button">Cancel</string>

    <!-- Group -->
    <string name="member">Member</string>
    <string name="group">Group</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="select_group">Select Group</string>

    <!-- OCR -->
    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>

    <string name="shopping_expense">Shopping expense : 7000 baht</string>
    <string name="saving_money">Saving : 1750 baht</string>

    <string name="receipt_name"></string>
    <string name="receipt_location"></string>
    <string name="total_price">Total Price</string>
    <string name="baht">Baht</string>
    <string name="save_button">Save</string>

    <string name="cancel_button">Cancel</string>
    <string name="add_button">Add</string>

    <string name="save_price">Save</string>

    <string name="receipt_recognition">Receipt Recognition</string>
    <string name="add_maunally">Update Item Manually</string>

    <string name="optimize_trip">Optimize Trip</string>
    <string name="optimize_price">Optimize Price</string>

    <string name="percent">%</string>

    <string name="scan_barcode">Scan Barcode</string>

    <string name="change_group">Change Group</string>

    <string name="log_out">Logout</string>
    <string name="create">Create</string>

</resources>
