<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:id="@+id/loginVisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">


                <TextView
                    style="@style/LoginTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="40dp"
                    android:text="@string/login_name"
                    android:textSize="34sp"/>

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/containerLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.example.seniorproject.smartshopping.view.customviewgroup.CustomViewGroupEditText
                        android:id="@+id/customGroupUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.example.seniorproject.smartshopping.view.customviewgroup.CustomViewGroupEditText
                        android:id="@+id/customGroupPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minEms="9"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/selector_shape_round_rect_button_white"
                        android:text="@string/login_text" />

                    <TextView
                        style="@style/LoginTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:text="or" />

                    <Button
                        android:id="@+id/btnCreateAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minEms="9"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/selector_shape_round_rect_button_white"
                        android:text="@string/create_account_text" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>